<resources>
    <string name="app_name">Movies TV</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming_movies">UpComing Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="contact_us">Contact Us</string>
    <string name="popular_series">Popular Series</string>
    <string name="top_rated_series">Top Rated Series</string>
    <string name="series_on_air">Series On Air</string>
    <string name="latest_series">Latest Series</string>
</resources>